# frierbot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/instructions/: coding-style.instructions.md  python.instructions.md
.github/workflows/: ci.yml
src/twitchbot/domain/: irc.py  models.py
tests/unit/: test_irc.py  test_models.py
