[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twitchbot"
version = "0.1.0"
description = "Twitch IRC chat bot"
requires-python = ">=3.12"
dependencies = [
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
